samples/_failures_safe/1761696749_4c95e3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_24aff949.c: In function ‘main’:
./samples/SAFE/__tmp_24aff949.c:150:17: error: expected expression at end of input
  150 |                 } else
      |                 ^
./samples/SAFE/__tmp_24aff949.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_24aff949.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_24aff949.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_24aff949.c:150:17: error: expected declaration or statement at end of input
